# test-bazel-cov

./: .bazelrc  MODULE.bazel  README.md  bep.json  example-graph.dot  explain.txt  instrumentation_filter.txt
.github/: codecov.yml
.github/workflows/: attach-clis-to-release.yml  coverage.yml  test-clang.yml
genhtml/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/api/src/main/kotlin/org/wfanet/measurement/api/: ApiKeyConstants.kt.func-c.html  ApiKeyConstants.kt.func.html  ApiKeyConstants.kt.gcov.html  Version.kt.func-c.html  Version.kt.func.html  Version.kt.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/api/v2alpha/src/main/kotlin/org/wfanet/measurement/api/v2alpha/: AccountKey.kt.func-c.html  AccountKey.kt.func.html  AccountKey.kt.gcov.html  ApiKeyKey.kt.func-c.html  ApiKeyKey.kt.func.html  ApiKeyKey.kt.gcov.html  CertificateKey.kt.func-c.html  CertificateKey.kt.func.html  CertificateKey.kt.gcov.html  ContextKeys.kt.func-c.html  ContextKeys.kt.func.html  ContextKeys.kt.gcov.html  DataProviderCertificateKey.kt.func-c.html  DataProviderCertificateKey.kt.func.html  DataProviderCertificateKey.kt.gcov.html  DataProviderExchangeKey.kt.func-c.html  DataProviderExchangeKey.kt.func.html  DataProviderExchangeKey.kt.gcov.html  DataProviderExchangeStepAttemptKey.kt.func-c.html  DataProviderExchangeStepAttemptKey.kt.func.html  DataProviderExchangeStepAttemptKey.kt.gcov.html  DataProviderExchangeStepKey.kt.func-c.html  DataProviderExchangeStepKey.kt.func.html  DataProviderExchangeStepKey.kt.gcov.html  DataProviderKey.kt.func-c.html  DataProviderKey.kt.func.html  DataProviderKey.kt.gcov.html  DataProviderPublicKeyKey.kt.func-c.html  DataProviderPublicKeyKey.kt.func.html  DataProviderPublicKeyKey.kt.gcov.html  DataProviderRecurringExchangeKey.kt.func-c.html  DataProviderRecurringExchangeKey.kt.func.html  DataProviderRecurringExchangeKey.kt.gcov.html  DuchyCertificateKey.kt.func-c.html  DuchyCertificateKey.kt.func.html  DuchyCertificateKey.kt.gcov.html  DuchyKey.kt.func-c.html  DuchyKey.kt.func.html  DuchyKey.kt.gcov.html  EventGroupKey.kt.func-c.html  (+93 more)
genhtml/common/api/grpc/src/main/kotlin/org/wfanet/measurement/common/api/grpc/: AkidPrincipalServerInterceptor.kt.func-c.html  AkidPrincipalServerInterceptor.kt.func.html  AkidPrincipalServerInterceptor.kt.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/common/api/src/main/kotlin/org/wfanet/measurement/common/api/: ResourceIds.kt.func-c.html  ResourceIds.kt.func.html  ResourceIds.kt.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/common/identity/src/main/kotlin/org/wfanet/measurement/common/identity/: AuthorityKeyServerInterceptor.kt.func-c.html  AuthorityKeyServerInterceptor.kt.func.html  AuthorityKeyServerInterceptor.kt.gcov.html  DuchyIdentity.kt.func-c.html  DuchyIdentity.kt.func.html  DuchyIdentity.kt.gcov.html  DuchyInfo.kt.func-c.html  DuchyInfo.kt.func.html  DuchyInfo.kt.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/eventdataprovider/noiser/src/main/kotlin/org/wfanet/measurement/eventdataprovider/noiser/: AbstractNoiser.kt.func-c.html  AbstractNoiser.kt.func.html  AbstractNoiser.kt.gcov.html  GaussianNoiser.kt.func-c.html  GaussianNoiser.kt.func.html  GaussianNoiser.kt.gcov.html  LaplaceNoiser.kt.func-c.html  LaplaceNoiser.kt.func.html  LaplaceNoiser.kt.gcov.html  Noiser.kt.func-c.html  Noiser.kt.func.html  Noiser.kt.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/measurementconsumer/stats/src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats/: MeasurementStatistics.kt.func-c.html  MeasurementStatistics.kt.func.html  MeasurementStatistics.kt.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/reporting/job/src/main/kotlin/org/wfanet/measurement/reporting/job/: ReportSchedulingJob.kt.func-c.html  ReportSchedulingJob.kt.func.html  ReportSchedulingJob.kt.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/reporting/service/api/src/main/kotlin/org/wfanet/measurement/reporting/service/api/: SubmitBatchRequests.kt.func-c.html  SubmitBatchRequests.kt.func.html  SubmitBatchRequests.kt.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
genhtml/reporting/service/api/v2alpha/src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/: CelFilteringMethods.kt.func-c.html  CelFilteringMethods.kt.func.html  CelFilteringMethods.kt.gcov.html  ContextKeys.kt.func-c.html  ContextKeys.kt.func.html  ContextKeys.kt.gcov.html  EventGroupKey.kt.func-c.html  EventGroupKey.kt.func.html  EventGroupKey.kt.gcov.html  IdVariable.kt.func-c.html  IdVariable.kt.func.html  IdVariable.kt.gcov.html  MetadataPrincipalServerInterceptor.kt.func-c.html  MetadataPrincipalServerInterceptor.kt.func.html  MetadataPrincipalServerInterceptor.kt.gcov.html  MetricCalculationSpecKey.kt.func-c.html  MetricCalculationSpecKey.kt.func.html  MetricCalculationSpecKey.kt.gcov.html  MetricKey.kt.func-c.html  MetricKey.kt.func.html  MetricKey.kt.gcov.html  MetricSpecDefaults.kt.func-c.html  MetricSpecDefaults.kt.func.html  MetricSpecDefaults.kt.gcov.html  PrincipalServerInterceptor.kt.func-c.html  PrincipalServerInterceptor.kt.func.html  PrincipalServerInterceptor.kt.gcov.html  (+31 more)
src/main/kotlin/org/wfanet/measurement/api/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/api/v2alpha/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/common/api/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/common/api/grpc/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/common/identity/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats/: BUILD.bazel
src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha/: BUILD.bazel
src/main/kotlin/sample/: BUILD.bazel  NumberEvaluator.kt  NumberEvaluator2.kt
src/test/kotlin/sample/: BUILD.bazel  NumberEvaluatorTest.kt
