load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])


kt_jvm_library(
    name = "resource_key",
    srcs = glob(["*Key.kt"]) + ["IdVariable.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/common/api:resource_key",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
    ],
)

kt_jvm_library(
    name = "measurement_principal",
    srcs = ["MeasurementPrincipal.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
        "//src/main/kotlin/org/wfanet/measurement/common/api:principal",
    ],
)

kt_jvm_library(
    name = "context_keys",
    srcs = ["ContextKeys.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:measurement_principal",
        "@wfa_common_jvm//imports/java/io/grpc:api",
        "@wfa_common_jvm//imports/java/io/grpc:context",
    ],
)

