load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = [
    "//src/main/kotlin/org/wfanet/measurement:__subpackages__",
    "//src/test/kotlin/org/wfanet/measurement:__subpackages__",
])

kt_jvm_library(
    name = "resource_key",
    srcs = ["ResourceKey.kt"],
    visibility = ["//visibility:public"],
)

kt_jvm_library(
    name = "principal",
    srcs = ["Principal.kt"],
    deps = [":resource_key"],
)







kt_jvm_library(
    name = "resource_ids",
    srcs = ["ResourceIds.kt"],
)
