load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])


kt_jvm_library(
    name = "cel_filtering_methods",
    srcs = ["CelFilteringMethods.kt"],
    deps = [
        "//imports/java/org/projectnessie/cel",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
    ],
)


kt_jvm_library(
    name = "context_keys",
    srcs = ["ContextKeys.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/common/api:principal",
        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:reporting_principal",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:report_schedule_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/io/grpc:api",
        "@wfa_common_jvm//imports/java/io/grpc:context",
    ],
)


kt_jvm_library(
    name = "metadata_principal_server_interceptor",
    srcs = ["MetadataPrincipalServerInterceptor.kt"],
    deps = [
        ":context_keys",
        ":principal_server_interceptor",
        ":reporting_principal",
        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/io/grpc:api",
        "@wfa_common_jvm//imports/java/io/grpc/stub",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
    ],
)


kt_jvm_library(
    name = "metric_spec_defaults",
    srcs = ["MetricSpecDefaults.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/api:api_key_constants",
        "//src/main/kotlin/org/wfanet/measurement/api:public_api_version",
        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:resource_key",
        "//src/main/proto/wfa/measurement/config/reporting:metric_spec_config_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:metrics_service_kt_jvm_grpc_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
    ],
)


kt_jvm_library(
    name = "principal_server_interceptor",
    srcs = ["PrincipalServerInterceptor.kt"],
    deps = [
        "context_keys",
        ":reporting_principal",
        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
        "//src/main/kotlin/org/wfanet/measurement/common/api/grpc:akid_principal_server_interceptor",
        "//src/main/kotlin/org/wfanet/measurement/common/identity",
        "@wfa_common_jvm//imports/java/com/google/protobuf",
        "@wfa_common_jvm//imports/java/io/grpc:api",
        "@wfa_common_jvm//imports/java/io/grpc:context",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
    ],
)


kt_jvm_library(
    name = "proto_conversions",
    srcs = ["ProtoConversions.kt"],
    deps = [
        ":reporting_exceptions",
        "//src/main/kotlin/org/wfanet/measurement/measurementconsumer/stats:measurement_statistics",
        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:metric_spec_defaults",
        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:reporting_principal",
        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api/v2alpha:resource_key",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_consumers_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurement_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:measurements_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/config/reporting:metric_spec_config_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/internal/reporting/v2:measurements_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/internal/reporting/v2:metric_calculation_spec_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/internal/reporting/v2:metrics_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/internal/reporting/v2:report_schedules_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/internal/reporting/v2:reporting_sets_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/internal/reporting/v2:reports_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:metric_calculation_spec_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:metrics_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:page_token_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:report_schedules_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:reporting_sets_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:reports_service_kt_jvm_grpc_proto",
        "@wfa_common_jvm//imports/java/com/google/protobuf/util",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/measurementconsumer",
    ],
)


kt_jvm_library(
    name = "report_schedule_info_server_interceptor",
    srcs = ["ReportScheduleInfoServerInterceptor.kt"],
    deps = [
        ":principal_server_interceptor",
        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
        "@wfa_common_jvm//imports/java/com/google/gson",
        "@wfa_common_jvm//imports/java/io/grpc:api",
        "@wfa_common_jvm//imports/java/io/grpc/stub",
    ],
)

kt_jvm_library(
    name = "report_schedules_service",
    srcs = ["ReportSchedulesService.kt"],
    deps = [
        ":cel_filtering_methods",
        ":metadata_principal_server_interceptor",
        ":principal_server_interceptor",
        ":proto_conversions",
        ":reporting_principal",
        ":resource_key",
        "//imports/java/org/projectnessie/cel",
        "//src/main/kotlin/org/wfanet/measurement/api:api_key_constants",
        "//src/main/kotlin/org/wfanet/measurement/api:public_api_version",
        "//src/main/kotlin/org/wfanet/measurement/common/api:resource_ids",
        "//src/main/kotlin/org/wfanet/measurement/reporting/service/api:submit_batch_requests",
        "//src/main/proto/wfa/measurement/api/v2alpha:data_providers_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/api/v2alpha:event_groups_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/internal/reporting/v2:report_schedules_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/internal/reporting/v2:reporting_sets_service_kt_jvm_grpc_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:page_token_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:report_kt_jvm_proto",
        "//src/main/proto/wfa/measurement/reporting/v2alpha:report_schedules_service_kt_jvm_grpc_proto",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/identity",
    ],
)


kt_jvm_library(
    name = "reporting_exceptions",
    srcs = ["ReportingExceptions.kt"],
)


kt_jvm_library(
    name = "reporting_principal",
    srcs = ["ReportingPrincipal.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
        "//src/main/kotlin/org/wfanet/measurement/common/api:principal",
        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
    ],
)

kt_jvm_library(
    name = "resource_key",
    srcs = glob(["*Key.kt"]) + ["IdVariable.kt"],
    deps = [
        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
        "//src/main/kotlin/org/wfanet/measurement/common/api:resource_key",
        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
    ],
)